# gha-cross-repo-issue-sync

./: .editorconfig  .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  Makefile  README.md  SECURITY.md  action.yaml  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: delete_branch_pr_tag.sh
.github/workflows/: bump-and-release.yml  codeql.yml  integration.yml  reusable-pull.yml  reusable-push.yml
scripts/: common.sh  sync-back.sh  sync-forward.sh  sync-pull.sh  sync-push.sh
tests/fixtures/: mirror_issues.json  source_issues.json
tests/test_helper/: gh_mock.bash
tests/unit/: test_cleanup.bats  test_common.bats  test_infra_files.bats  test_sync_back.bats  test_sync_forward.bats  test_sync_pull.bats  test_sync_push.bats
