[project]
name = "gha-cross-repo-issue-sync"
version = "0.3.0"
description = "GitHub Action for bidirectional cross-repo issue sync"

[tool.bumpversion]
current_version = "0.3.0"
commit = false
tag = false
allow_dirty = true
tag_name = "v{new_version}"
message = "bump: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "action.yaml"
search = "# version: {current_version}"
replace = "# version: {new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]\n\n---"
replace = "## [Unreleased]\n\n---\n\n## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "badge/version-{current_version}-8A2BE2"
replace = "badge/version-{new_version}-8A2BE2"
